# riptide_slam

./: CMakeLists.txt  package.xml
config/: slam_config.yaml
core/: BasePlugin.cpp  CMakeLists.txt  SlamCore.cpp  main.cpp
include/riptide_slam/: BasePlugin.hpp  PreintegratedPlugin.hpp  SlamCore.hpp  SlamNode.hpp
launch/: slam.launch.py
plugins/imu/: CMakeLists.txt  IMUPlugin.cpp  IMUPlugin.hpp
src/: SlamNode.cpp  main.cpp
